# auv-python

./: .env.example  .gitignore  .pre-commit-config.yaml  AUV.py  CONTRIBUTING.md  DORADO_WORKFLOW.md  LAYOUT.md  LICENSE  LRAUV_WORKFLOW.md  Makefile  README.md  README_ccds.md  TROUBLESHOOTING.md  WORKFLOW.md  bitbucket-pipelines.yml  calibrate.py  calibrate_align.py  ci-docker-compose.yml  conftest.py  correct_log_times.py  ctd_proc.py  docker-compose.yml  hs2_calc_bb.py  hs2_proc.py  log2netcdf.py  logs2netcdfs.py  process_i2map.py  production.yml  pyproject.toml  quick_look.ipynb  quick_look_compare.ipynb  quick_look_derived.ipynb  readauvlog.py  requirements.txt  setup.py  template.env  test.sh  test_calibrate_align.py  test_environment.py  test_hs2_proc.py
.github/workflows/: ci.yml  pre-commit.yml
docker/: Dockerfile  Dockerfile-ci
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: 1.0-mpm-logs2netcdfs.ipynb  1.0-mpm-quick-look.ipynb  1.1-mpm-logs2netcdfs-ssds.ipynb  2.0-mpm-calibrate.ipynb  2.0-mpm-quick-look-derived.ipynb  2.1-mpm-calibrate-i2map.ipynb  2.2-mpm-combine-lrauv.ipynb  3.0-mpm-align.ipynb  3.0-mpm-quick-look-ssds.ipynb  3.1-mpm-align-i2map.ipynb  3.2-mpm-align-lrauv.ipynb  4.0-mpm-resample.ipynb  4.0-mpm-resampled-matlab.ipynb  4.1-mpm-resample-matlab.ipynb  4.2-mpm-resample-i2map.ipynb  4.3-mpm-resample-lrauv.ipynb  5.0-mpm-stoqs2parquet.ipynb  5.1-mpm-biolume_raw-plotting.ipynb  5.2-mpm-bg_biolume-PiO-paper.ipynb  5.3-mpm-compare_auv_biolume.ipynb  5.4-mpm-gulper_measurements.ipynb  5.5-mpm-explore_relationships.ipynb  5.6-mpm-compare_auv_hs2_ecopuck.ipynb  5.7-mpm-explore_relationships_september2013.ipynb  5.8-mpm-holoviews_and_ipywidget_demonstration.ipynb  5.9-mpm-holoviews_interactive_hs2_viz.ipynb  6.0-mpm-compare_auv_hs2_ecopuck.ipynb  6.0-mpm-cross-calibrate-dorado-pontus-backscatter.ipynb  6.1-mpm-cross-calibrate-dorado-pontus-backscatter.ipynb  6.1b-mpm-cross-calibrate-dorado-pontus-backscatter-auv-python.ipynb  6.2-mpm-hs2-values-over-time.ipynb  6.3-mpm-test-correct_biolume_proxies.ipynb  README.md  quick_look.ipynb  quick_look_ssds.ipynb
src/data/: AUV.py  BLFilter.py  GITHUB_ISSUE_6_NC42NETCDFS_IMPLEMENTATION.md  align.py  archive.py  calibrate.py  calibrate_align.py  combine.py  common_args.py  conftest.py  correct_log_times.py  create_products.py  ctd_proc.py  dorado_info.py  emailer.py  gulper.py  hs2_proc.py  logs2netcdfs.py  lopcMEP.py  lopcToNetCDF.py  lrauv_deployment_plots.py  m1_soundspeed.py  make_permalink.py  nc42netcdfs.py  process.py  processLOPC.pl  process_Dorado389.py  process_dorado.py  process_i2map.py  process_lrauv.py  process_lrauv_sbd.py  provenance.py  readauvlog.py  resample.py  sbd2netcdf.py  setup.py  sipper.py  test_calibrate_align.py  test_ctd_proc.py  test_hs2_proc.py  (+8 more)
