[tool.poetry]
name = "auv-python"
version = "0.1.0"
description = "Python code for processing MBARI Dorado-class AUV instrument data"
package-mode = false

license = "MIT"

authors = [
    "Mike McCann <mccann@mbari.org>"
]

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/mbari-org/auv-python"
homepage = "https://github.com/mbari-org/auv-python"

keywords = ['auv', 'dorado', 'oceanograpy', 'dataprocessing']

[tool.poetry.dependencies]
# On mac: sudo port install python310 && sudo port select --set python3 python310 && sudo port select --set python python310
# pip uninstall xattr && pip install xattr, see:
# https://github.com/python-poetry/poetry/issues/6891#issuecomment-1343047469
# (Attempted updates to python311 & python312: 'poetry install' fails with installing llvmlite - Jan 2024)
python = "3.10.*"
toml = "^0.9"
# Dependencies with extras
aiohttp = "^3.7.4"
altair = "^4.1.0"
cf-xarray = "^0.8.4"
coards = "^1.0.5"
hvplot = "^0.9.0"
mkdocs = "^1.2.3"
nc-time-axis = "^1.3.1"
netCDF4 = "^1.5.7"
pytest = "^6.2.5"
seawater = "^3.3.4"
black = "^22.3.0"
ipympl = "^0.9.1"
GitPython = "^3.1.29"
pyarrow = "^14.0.1"
datashader = "^0.15.2"
rolling = "^0.3.0"
pysolar = "^0.10"
pooch = "^1.7.0"
statsmodels = "^0.13.5"
pyproj = "^3.5.0"
jupyter = "^1.0.0"
cmocean = "^3.0.3"
ruff = "^0.9.8"
pre-commit = "^4.1.0"


[tool.poetry.dev-dependencies]
pytest = "^6.0"
pytest-cov = "^3.0"

[tool.ruff]
target-version = "py310"
line-length = 100
# Exclude a variety of commonly ignored directories and things in expd we don't want checked
extend-exclude = [
    "notebooks/*.ipynb",
]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  'ISC',
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TC",
  "INT",
  # "ARG", # Unused function argument
    "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  # "NPY",
  # "AIR",
  "PERF",
  # "FURB",
  # "LOG",
  "RUF",
]
ignore = [
    "COM812", # Missing-trailing-comma
    "ERA001", # Commented-out code
    "N801", # Class name should use CapWords convention
    "N802", # Function name should be lowercase
    "N806", # Variable in function should be lowercase
    "N818", # Exception name should be named with an Error suffix
    "SLF001", # Private member accessed
]
