[project]
name = "auv-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.9",
    "cf-xarray>=0.10.5",
    "cmocean>=4.0.3",
    "coards>=1.0.5",
    "datashader>=0.18.1",
    "defusedxml>=0.7.1",
    "gitpython>=3.1.44",
    "hvplot>=0.11.3",
    "netcdf4>=1.7.2",
    "numpy>=2.2.6",
    "pyproj>=3.7.1",
    "pysolar>=0.13",
    "seawater>=3.3.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
