[project]
name = "auv-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
# VS Code's debugpy Cython extension handling in Python 3.13 is broken - mpm 9 June 2025
requires-python = "==3.12.*" 
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.11",
    "cf-xarray>=0.10.5",
    "cmocean>=4.0.3",
    "coards>=1.0.5",
    "datashader>=0.18.1",
    "defusedxml>=0.7.1",
    "gitpython>=3.1.44",
    "hvplot>=0.11.3",
    "netcdf4>=1.7.2",
    "numpy>=2.2.6",
    "pyproj>=3.7.1",
    "pysolar>=0.13",
    "seawater>=3.3.5",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pre-commit>=3.7.0",
    "ruff>=0.4.4",
]
[tool.ruff]
target-version = "py312"
line-length = 100
# Exclude a variety of commonly ignored directories and things in expd we don't want checked
extend-exclude = [
    "notebooks/*.ipynb",
]

[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  # "ANN", # flake8-annotations: we should support this in the future but 100+ errors atm
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "COM",
  "C4",
  "DTZ",
  "T10",
  "DJ",
  "EM",
  "EXE",
  "FA",
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "INT",
  # "ARG", # Unused function argument
    "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  # "NPY",
  # "AIR",
  "PERF",
  # "FURB",
  # "LOG",
  # "RUF",
]
ignore = [
    "COM812", # Missing-trailing-comma
    "ERA001", # Commented-out code
    "N801", # Class name should use CapWords convention
    "N802", # Function name should be lowercase
    "N806", # Variable in function should be lowercase
    "N818", # Exception name should be named with an Error suffix
    "SLF001", # Private member accessed
]

[tool.ruff.lint.per-file-ignores]
"src/data/dorado_info.py" = ["E501"]
